# rmexif

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  rmexif.c
src/: rmexif.c
